CSS/styles.css
body   {
  margin: 0;
  padding: 0;
  line-height: 1.5;
  font-size: 16px;

}

/* styling our overall page */
body     {
  background: #FFF;
  font-family: Arial, Helvetica, sans-serif;
}

h1{
  font-style: bold;
  color: white;
  font-size: 18px;
  justify-content: center;
  text-transform: uppercase;
  padding: 10px;
  margin: 10px;}

h2{
  font-style: bold;
  color: white;
  font-size: 18px;
  background-image: url(https://images.hdqwalls.com/download/vaporwave-4k-k3-1920x1080.jpg);
  text-align: center;
  padding: 1px;
  margin: 1px;
}

h3{
  font-style: bold;
  color: white;
  font-size: 18px;
  background-image: url(https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse2.mm.bing.net%2Fth%3Fid%3DOIP.AKxuYPx7HhlL3QZg4oFIzwHaEl%26pid%3DApi&f=1);
  text-align: center;
  padding: 1px;
  margin: 1px;
}

h4{
  font-style: bold;
  color: white;
  font-size: 18px;
  background-image: url(https://c.wallhere.com/photos/86/9e/vaporwave_grid-1214341.jpg!d);
  text-align: center;
  padding: 0px,1px;
}

p {
  padding: 3px;
}

/* header */
header   {
  background: #222;
  color: #FFF;
  padding: 10px 30px;
  text-align: center;
}

/* logo */
#logo         {
  display: inline-block;
  color: #FFF;
  text-decoration: none;
  width: 100%;
}

#logo img    {
  width: 50px;
  border-radius: 3px;
  margin-right: 8px;
  vertical-align: middle;
}
#logo span   {
  display: inline-block;
}

/* main content */
.welcome           {
  min-height: 500px;
  text-align: center;
  background-image: url(https://wallpapertag.com/wallpaper/full/5/b/8/536376-new-glitch-wallpapers-1920x1080-hd-1080p.jpg);
  background-size: cover;
}

.welcome-content   {
  color: #FFF;
  padding-top: 10px;
}

.welcome-content h1   {
  font-size: 100px;
  margin: 0;
}

.welcome-content p    {
  font-size: 50px;
}

.welcome-content a    {
  display: inline-block;
  color: #FFF;
  border: 3px solid #FFF;
  background-color: #222;
  border-radius: 3px;
  padding: 15px;
  margin-bottom: 15px;
  text-decoration: none;
  font-size: 28px;
  max-width: 90%;
}

/* basic site sections */
.site-section   {
  padding-bottom: 10px;
  padding-top: 10px;
}
.site-section-secondary   {
  background: #EFEFEF;
}

.site-section-inside   {
  max-width: 1200px;
  margin: auto;
  width: 80%;
}

.section-header {
  text-align: center;
  margin-bottom: 10px;
}

/* Portfolio boxes */
.portfolio-box   {
  display: inline-block;
  width: 30.1%;
  padding: 10px 10px;
  margin: auto;
  text-align: center;
}

.portfolio-box img  {
  margin-bottom: auto;
  width: 80px;
  align-content: center;
}

.portfolio-box h5   {
  font-size: 20px;
  color: #999;
  text-transform: uppercase;
  font-weight: 300;
  letter-spacing: 2px;
  margin: auto;
}

/* Column Format */
.flex-container {
  display: flex;
  flex-direction: row;
}

.flex-left {
  width: 30%;
  margin: 5px;
  padding: 10px;
  color: rgb(233, 193, 193);
  border: 4px solid rgb(82, 7, 69);
  background-color: #222;
  font-size: 14px;
  text-align: justify;
}

.flex-right {
  width: 70%;
  margin: 5px;
  padding: 10px;
  color: rgb(233, 193, 193);
  border: 4px solid rgb(82, 7, 69);
  text-align: justify;
  background-color: #222;
  font-size: 14;
}

/* footer */
footer   {
  background: #222;
  color: #777;
  padding: 10px;
  text-align: center;
}

footer img   {
  display: block;
  border-radius: 5px;
  width: 80px;
  margin: 0 auto 10px;
}

